index.css
/* 
    https://www.realtimecolors.com/?colors=060a0a-f3f8f8-629da5-adaed0-8b84b8&fonts=Poppins-Poppins
    Text: #060a0a
    Background: #f3f8f8
    Primary: #629da5
    Secondary: #adaed0
    Accent: #8b84b8 
*/

body{
    background-color: #f3f8f8;
    color: #060a0a;
    font-family: 'Poppins', Courier, monospace;
    
}

p{
    font-size: xx-small;
}
.wrapper{
    display: flex;
    align-content: center;
    width: 75%;
    margin: auto;

}

.large {
    font-size: small;
}
.quote{
    font-style: italic;
}

.left_column{
    width: 50%;
    margin: 0 2em 0 0;
}
.right_column{
    width: 50%;
    margin: 0 0 0 2em;
    display: flex;
    align-items: center;

}

.output_row{
    outline: auto;
}
.grid_table{
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.grid_row{
    width: 100%;
    display: flex;
    
}

button{
    width: 25%;
    height: 2rem;
    border-radius: 5px;
}

.resetter{
    width: 100%;
}

.symbol{
    background-color: #629da5;
}

.equals,
.resetter{
    background-color: #adaed0;
}

